Cleaning up std-benchmarks build (#13677)
It's hard to see real warnings/errors beyond what `std-benchmarks` reports during regular build.

# Important Notes
Fixed in `sbt:enso> std-benchmarks/compile`
```
[warn] WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
[warn] WARNING: sun.misc.Unsafe::objectFieldOffset has been called by com.oracle.truffle.api.dsl.InlineSupport$UnsafeField (file:/home/hubert/.cache/coursier/v1/https/repo1.maven.org/maven2/org/graalvm/truffle/truffle-api/24.2.0/truffle-api-24.2.0.jar)
[warn] WARNING: Please consider reporting this to the maintainers of class com.oracle.truffle.api.dsl.InlineSupport$UnsafeField
[warn] WARNING: sun.misc.Unsafe::objectFieldOffset will be removed in a future release
```

```
[error] [JPMSUtils/std-benchmarks] Not all modules from classpath were found
[error] [JPMSUtils/std-benchmarks] Ensure libraryDependencies and moduleDependencies are correct (79 != 80): List(org-openide-util-lookup)
```

```
[warn] warning: [options] module name in --add-exports option not found: org.slf4j.nop
```

Additionally,
```
[warn] [JPMSPlugin/runtime-language-arrow] ModuleID org.enso:runtime-language-arrow:0.0.0-dev specified inside `moduleDependencies` task. This is and internal dependency and should be specified in `internalModuleDependencies`.
```

Still remaining in `std-benchmarks` but it requires some module magic:
```
[warn] WARNING: A restricted method in java.lang.System has been called
[warn] WARNING: java.lang.System::load has been called by com.oracle.truffle.polyglot.JDKSupport in module org.graalvm.truffle (file:/home/hubert/.cache/coursier/v1/https/repo1.maven.org/maven2/org/graalvm/truffle/truffle-api/24.2.0/truffle-api-24.2.0.jar)
[warn] WARNING: Use --enable-native-access=org.graalvm.truffle to avoid a warning for callers in this module
[warn] WARNING: Restricted methods will be blocked in a future release unless native access is enabled
[warn]
[warn] SLF4J(W): No SLF4J providers were foun